# luzmo-plugin

./: .gitignore  Cargo.toml  README.md
archive/node-plugin/: package-lock.json  package.json  server.js
archive/notes/: Eerstemain.txt
archive/old-tests/: body.json  query.json
scripts/: test_query.ps1
src/: errors.rs  lib.rs  main.rs
src/engine/: aggregation.rs  dataset.rs  execute.rs  filters.rs  mod.rs  plan.rs
src/luzmo/: dataset.rs  types.rs
src/server/: authorize.rs  dataset.rs  health.rs  mod.rs  query.rs
src/utils/: ids.rs  mod.rs  sanitize.rs  secret.rs
tests/: query_engine.rs
