[package]
name = "luzmo-plugin"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dotenv = "0.15"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3

